Bug 526427 - "Create new launch configuration" is truncated in run bar in French.

--- a/bundles/org.eclipse.orion.client.ui/web/orion/widgets/projects/RunBar.css
+++ b/bundles/org.eclipse.orion.client.ui/web/orion/widgets/projects/RunBar.css
@@ -45,7 +45,7 @@
 	background: #37474F;
 	border-radius: 5px;
 	padding: 2px 0 2px 4px;
-	width: 270px;
+	width: 300px;
 }
 
 .launchConfigurationsButton {
